Update style.css file to update primary color variable from black to brown

--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -30,7 +30,7 @@
 \*------------------------------------*/
 
 :root {
-  --primary-color: black;
+  --primary-color: brown;
   --secondary-color: #f0f0f0;
   --text-color: #fff;
   --num-color: rgba(0, 0, 0, 0.40);
