add example for gird

--- a/example-grid/style.css
+++ b/example-grid/style.css
@@ -1,76 +1,98 @@
-
-.example {
+.product {
     display: grid;
-    grid-template-columns: 5em 100px 30%;
-    grid-template-rows: 200px auto;
+    grid-template-columns: repeat(auto-fit, minmax(358px, 1fr));
+    /* grid-template-rows: auto 30rem; */
+    /* column-gap: 1rem; */
+    max-width: 100%;
+    /* row-gap: 1rem; */
+    /* gap: 1rem; */
+}
+
+
+.product__item {
+    border: 1px solid green;
+    text-align: center;
+}
+
+.repeat {
+    display: grid;
+    grid-template-columns: 100px repeat(2, 2fr 1fr 1fr);
+}
+
+.auto-fill {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+}
+
+.auto-fit {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+.place-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    /* grid-auto-flow: row; */
+    grid-auto-flow: column;
+    max-width: 20rem;
     gap: 10px;
-}
-
-.example__item {
-    background-color: bisque;
-}
-
-.example_resposive {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 33%));
-    gap: 1em;
-    max-width: 83rem;
-}
-
-select {
-    min-width: unset;
-}
-
-.container {
-    /* width: 90%; */
-    margin: 0 auto;
 }
 
 .span-track {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 200px 100px;
-    background-color: bisque;
-    grid-auto-flow: row;
+
 }
 
-.span-track--col-end {
-    grid-column-end: span 2;
-    background-color: aquamarine;
+.span-track--col {
+    grid-column: 1 / span 3;
 }
 
-.span-track--row-end {
-    grid-row-end: span 3;
-    background-color: blueviolet;
+.span-track--row {
+    grid-row: 2 / span 3;
 }
 
-.grid-area {
+.negative {
     display: grid;
-    grid-template-columns: repeat(4, minmax(0,1fr));
-    grid-template:
-    "header header header header" 
-    "sidebar content content content" 
-    "footer footer footer footer" ;
-    text-align: center;
-    min-width: 40rem;
+    grid-template-columns: 1fr 2fr 1fr;
 }
 
-.grid-area__header {
-    grid-area: header;
-    background-color: rgb(59, 21, 211);
+.negative__item {
+    grid-column: 2 / -3;
+    background-color: aqua;
+    /* grid-row: 1 / -4; */
 }
 
-.grid-area__sidebar {
-    grid-area: sidebar;
-    background-color: rgb(39, 81, 81);
+.size-implicit {
+    display: grid;
+    /* grid-auto-rows: minmax(1em, 8em); */
+    grid-auto-columns: 500px 1fr;
 }
 
-.grid-area__content {
-    grid-area: content;
-    background-color: rgb(221, 64, 127);
+.name-grid {
+    display: grid;
+    grid-template-columns:  [main-start aside-start] 100px  [aside-end content-start] 355px [content-end main-end];
+    gap: 10px;
 }
 
-.grid-area__footer {
-    grid-area: footer;
-    background-color: rgb(179, 163, 59);
+.name-grid__sidebar {
+    grid-column: main-start / aside-end;
+}
+
+.name-grid__footer {
+    grid-column: aside-end / main-end
+}
+
+@media (min-width: 768px) {
+    .product {
+        grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+    }
+}
+
+
+@media (min-width: 1024px) {
+    .product {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
 }
