update name  folder

--- a/practice-two/src/style/index.css
+++ b/practice-two/src/style/index.css
@@ -3,4 +3,4 @@
 @import url(./bases/index.css);
 @import url(./layouts/index.css);
 @import url(./moduls.css/index.css);
-@import url(./components/index.css);
+@import url(./states/index.css);
