create folder image section and split icon smaller

--- a/practice-two/src/styles/layouts/header.scss
+++ b/practice-two/src/styles/layouts/header.scss
@@ -41,7 +41,7 @@
       height: 48px;
       border-radius: 62px;
       width: 100%;
-      background-image: url('../assets/images/search.svg');
+      background-image: url('../assets/images/headers/search.svg');
       background-repeat: no-repeat;
       background-position: 12px 12px;
       padding: 2px 52px;
