--- a/practice-two/src/styles/bases/variable.scss
+++ b/practice-two/src/styles/bases/variable.scss
@@ -1,6 +1,7 @@
 // variable color
 
 $bg-color: black;
+$bg-secondary:#F2F0F1;
 $secondary-color: #f0f0f0;
 $text-color: #fff;
 $decs-color: rgba(0, 0, 0, 0.40);
