--- a/practice-two/src/styles/modules/title.scss
+++ b/practice-two/src/styles/modules/title.scss
@@ -1,16 +1,26 @@
 .title {
   font-family: Integral CF;
-}
-
-.title-primary {
   font-weight: 700;
-  font-size: math.div(25.2, 20) * 1em;
-  line-height: 34px;
-  padding-bottom: 5px;
+
+  &-primary {
+    font-size: math.div(25.2, 20) * 1em;
+    line-height: 34px;
+    padding-bottom: 5px;
+  }
+
+  &-secondary {
+    font-size: math.div(36, 20)*1em;
+    max-width: 380px;
+  }
 }
 
 @media (min-width: 1024px) {
   .title-primary {
     font-size: math.div(32, 20) * 1em;
+  }
+
+  .title-secondary {
+    font-size: math.div(64, 20)*1em;
+    max-width: 577px;
   }
 }
