--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -3,12 +3,9 @@
   font-family: Satoshi;
   min-width: 390px;
   font-size: 20px;
-  &__item {
-    font-size: 1em;
-  }
 
   &__desc {
-    padding-top: 2em;
+    padding-top: 1em;
   }
 
   &__content {
@@ -28,31 +25,35 @@
   }
 
   &__info-num {
-    font-size: math.div(24, 20)*1em;
+    font-size: math.div(24, 20) * 1em;
     font-weight: 700;
-    padding-bottom: 10px;
-    gap: 10px;
+    padding: 6px 0;
   }
 
   &__info-desc {
     display: block;
-    font-size: math.div(12, 20)*1em;
+    font-size: math.div(12, 24) * 1em;
     color: $primary-color;
     font-weight: 400;
   }
 
-  &__info-center {
+  &__info--center {
     flex-basis: 100%;
     text-align: center;
+  }
+
+  &--special {
+    border-left: 1px solid $line-color;
+    padding-left: 27.5px;
+  }
+
+  &__img {
+    width: 100%;
   }
 }
 
 @media (min-width: 1024px) {
   .banner {
-    &__item {
-      font-size: 20px;
-    }
-
     &__desc {
       padding-top: 103px;
     }
@@ -68,8 +69,9 @@
     &__info {
       display: grid;
       grid-template-columns: auto auto auto;
-      margin: 48px 0px 116px 0px;
+      padding: 48px 0px 116px 0px;
       max-width: 596px;
+      margin: 0;
     }
 
     &__info-num {
@@ -78,8 +80,14 @@
     }
 
     &__info-desc {
-      font-size: math.div(16, 20) * 1em;
+      font-size: math.div(16, 40) * 1em;
       font-weight: 400;
+      text-align: left;
+    }
+
+    &--special {
+      padding-right: 27.5px;
+      border-right: 1px solid $line-color;
     }
   }
 }
