--- a/practice-two/src/styles/modules/title.scss
+++ b/practice-two/src/styles/modules/title.scss
@@ -4,7 +4,7 @@
 }
 
 .title-secondary {
-  font-size: math.div(36, 20) * 1em;
+  font-size: math.div(36,16) *1em;
   font-weight: 700;
   max-width: 380px;
 }
