--- a/practice-two/src/styles/bases/variable.scss
+++ b/practice-two/src/styles/bases/variable.scss
@@ -9,3 +9,5 @@ $product-color: #ff3333;
 $primary-color: rgba(0, 0, 0, 0.60);
 $btn-primary: #e7e7e7;
 $line-color: rgba(0, 0, 0, 0.10);
+
+$browser-context: 16;
