--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -1,15 +1,15 @@
 .banner {
   background-color: $bg-secondary;
   font-family: Satoshi;
-  min-width: 390px;
+  min-width: 19.5rem;
 
   &__desc {
-    padding-top: 2rem;
+    padding-top: 2em;
   }
 
   &__content {
-    font-size: math.div(14, 20) * 1em;
-    max-width: 380px;
+    max-width: 18rem;
+    font-size: 0.7em;
     padding: 1rem 0;
     color: $primary-color;
   }
@@ -17,37 +17,37 @@
   &__info {
     display: flex;
     flex-wrap: wrap;
-    max-width: 278px;
-    margin: 20px 40px;
+    max-width: 15rem;
+    padding: 1rem 0;
     justify-content: space-between;
+    margin: 0 auto;
   }
 
   &__info-num {
-    font-size: math.div(24, 20) * 1em;
+    font-size: 1.2em;
     font-weight: 700;
     padding: 6px 0;
   }
 
   &__info-desc {
     display: block;
-    font-size: math.div(12, 24) * 1em;
+    font-size: 0.6em;
     color: $primary-color;
     font-weight: 400;
   }
 
   &__info--center {
-    flex-basis: 100%;
-    text-align: center;
+    margin: 0 auto;
   }
 
   &--special {
     border-left: 1px solid $line-color;
-    padding-left: 27.5px;
+    padding-left: 1rem;
   }
 
   &__img {
     width: 100%;
-    // max-width: 390px;
+    max-width: 19.5rem;
   }
 
   &__star {
@@ -55,43 +55,41 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1440px) {
   .banner {
     background-image: url('../assets/images/banners/rectangle.png');
     background-repeat: no-repeat;
 
     &__desc {
-      padding-top: 103px;
+      padding: 3.2rem 0 2.125rem 0;
     }
 
     &__item {
       display: grid;
-      grid-template-columns: 620px 1fr;
+      grid-template-columns: 1fr 1fr;
     }
 
     &__content {
-      font-size: math.div(16, 20)*1em;
-      max-width: 545px;
+      font-size: 0.5em;
+      max-width: 17rem;
       color: $primary-color;
     }
 
     &__info {
-      display: grid;
-      grid-template-columns: auto auto auto;
-      padding: 48px 0px 103px 0px;
-      max-width: 596px;
-      margin: 0;
+      flex-wrap: nowrap;
+      margin-top: 0.5rem;
+      max-width: 20.75rem;
+      text-align: left;
+      gap: 1rem;
     }
 
     &__info-num {
-      font-size: math.div(40, 20)*1em;
+      font-size: 1.25em;
       font-weight: 700;
     }
 
     &__info-desc {
-      font-size: math.div(16, 40) * 1em;
-      font-weight: 400;
-      text-align: left;
+      font-size: 0.4em;
     }
 
     &__img {
@@ -99,7 +97,7 @@
     }
 
     &--special {
-      padding-right: 27.5px;
+      padding-right: 1rem;
       border-right: 1px solid $line-color;
     }
 
@@ -107,11 +105,11 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       justify-content: end;
-      margin-top: 86px;
+      margin-top: math.div(86, 32) * 1rem;
     }
 
     &__star--center {
-      margin-top: 211px;
+      margin-top: 6.6rem;
     }
 
     &__star--right {
