--- a/practice-two/src/styles/layouts/sign-up.scss
+++ b/practice-two/src/styles/layouts/sign-up.scss
@@ -4,11 +4,12 @@
   padding: 9px 0;
   text-align: center;
   font-size: 20px;
-  min-width: 320px;
+  min-width: 19.5rem;
 
   &__text {
-    font-size: math.div(12, 20) * 1em ;
+    font-size: 0.6em;
     color: $text-color;
+    text-align: center;
   }
 
   &__link {
@@ -20,14 +21,14 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1440px) {
   .sign-up {
     padding: 9px (100% - math.div(1240, 1440)*100%)/2;
     display: flex;
     line-height: normal;
 
     &__text {
-      font-size: math.div(14, 20) * 1em ;
+      font-size: math.div(14, 20) * 1em;
       margin: 0 auto;
     }
 
