--- a/practice-two/src/styles/modules/title.scss
+++ b/practice-two/src/styles/modules/title.scss
@@ -4,18 +4,18 @@
 }
 
 .title-secondary {
-  font-size: math.div(36,16) *1em;
+  font-size: 1.8em;
   font-weight: 700;
-  max-width: 380px;
+  max-width: 19rem;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1440px) {
   .title-primary {
-    font-size: math.div(32, 20) * 1em;
+    font-size: 2em;
   }
 
   .title-secondary {
-    font-size: math.div(64, 20)*1em;
-    max-width: 577px;
+    font-size: 2em;
+    max-width: 18rem;
   }
 }
