--- a/practice-two/src/styles/bases/base.scss
+++ b/practice-two/src/styles/bases/base.scss
@@ -4,12 +4,11 @@
 
 html {
   font-family: Integral CF, Satoshi;
-  font-size: 20px !important;
+  margin: 0 auto;
 }
 
 @media (min-width: 1440px) {
   html {
     max-width: 1440px;
-    font-size: 32px !important;
   }
 }
