--- a/practice-two/src/styles/layouts/header.scss
+++ b/practice-two/src/styles/layouts/header.scss
@@ -1,15 +1,14 @@
 .navbar {
   display: flex;
-  font-size: 20px;
   font-family: Satoshi;
-  padding: 20px 0;
+  padding: ToRem(20) 0;
   align-items: center;
-  gap: 12px;
+  gap: ToRem(12);
 
   &__option {
     display: flex;
     margin-left: auto;
-    gap: 10px;
+    gap: ToRem(10);
   }
 
   &__list,
@@ -18,11 +17,12 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1440px) {
   .navbar {
     display: grid;
-    grid-template-columns: 160px 321px 1fr 62px;
-    gap: 40px;
+    grid-template-columns: ToRem(160) ToRem(321) 1fr ToRem(62);
+    gap: ToRem(40);
+    font-size: math.div(16,32) * 1em;
 
     &__nav,
     &__option-search {
@@ -34,21 +34,20 @@
     }
 
     &__list {
-      align-items: center;
       display: flex;
       justify-content: space-between;
-      font-size: math.div(16, 20) * 1em;
+      align-items: center;
     }
 
     &__search {
       display: block;
-      height: 48px;
-      border-radius: 62px;
+      height: ToRem(48);
+      border-radius: ToRem(62);
       width: 100%;
       background-image: url('../assets/images/headers/search.svg');
       background-repeat: no-repeat;
-      background-position: 12px 12px;
-      padding: 2px 52px;
+      background-position: ToRem(12) ToRem(12);
+      padding: ToRem(2) ToRem(52);
       border: 1px solid $secondary-color;
     }
   }
