--- a/practice-two/src/styles/layouts/sign-up.scss
+++ b/practice-two/src/styles/layouts/sign-up.scss
@@ -1,10 +1,10 @@
 .sign-up {
   background-color: $bg-color;
   font-family: Satoshi;
-  padding: 9px 0;
+  padding: ToRem(9) 0;
   text-align: center;
   font-size: 20px;
-  min-width: 19.5rem;
+  min-width: ToRem(390);
 
   &__text {
     font-size: 0.6em;
@@ -23,7 +23,7 @@
 
 @media (min-width: 1440px) {
   .sign-up {
-    padding: 9px (100% - math.div(1240, 1440)*100%)/2;
+    padding: ToRem(9) (100% - math.div(1240, 1440)*100%)/2;
     display: flex;
     line-height: normal;
 
