--- a/practice-two/src/styles/layouts/header.scss
+++ b/practice-two/src/styles/layouts/header.scss
@@ -1,28 +1,33 @@
 .navbar {
   display: flex;
-  font-size: 20px;
   font-family: Satoshi;
-  padding: 20px 0;
+  padding: toRem(20) 0;
   align-items: center;
-  gap: 12px;
+  gap: toRem(12);
 
   &__option {
     display: flex;
     margin-left: auto;
-    gap: 10px;
+    gap: toRem(10);
   }
 
   &__list,
   &__search {
     display: none;
   }
+
+  &__nav {
+    border: none;
+    background-color: $text-color;
+  }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1440px) {
   .navbar {
     display: grid;
-    grid-template-columns: 160px 321px 1fr 62px;
-    gap: 40px;
+    grid-template-columns: toRem(160) toRem(321) 1fr toRem(62);
+    gap: toRem(40);
+    font-size: math.div(16,32) * 1em;
 
     &__nav,
     &__option-search {
@@ -34,21 +39,20 @@
     }
 
     &__list {
-      align-items: center;
       display: flex;
       justify-content: space-between;
-      font-size: math.div(16, 20) * 1em;
+      align-items: center;
     }
 
     &__search {
       display: block;
-      height: 48px;
-      border-radius: 62px;
+      height: toRem(48);
+      border-radius: toRem(62);
       width: 100%;
       background-image: url('../assets/images/headers/search.svg');
       background-repeat: no-repeat;
-      background-position: 12px 12px;
-      padding: 2px 52px;
+      background-position: toRem(12) toRem(12);
+      padding: toRem(2) toRem(52);
       border: 1px solid $secondary-color;
     }
   }
