--- a/practice-two/src/styles/modules/title.scss
+++ b/practice-two/src/styles/modules/title.scss
@@ -4,7 +4,8 @@
 }
 
 .title-primary {
-  font-size: math.div(32, 20) * 1em;
+  font-size: 1.6em;
+  padding-top: toRem(10);
 }
 
 .title-secondary {
@@ -15,7 +16,7 @@
 
 @media (min-width: 1440px) {
   .title-primary {
-    font-size: 2em;
+    font-size: 1.5em;
   }
 
   .title-secondary {
