--- a/practice-two/src/styles/bases/base.scss
+++ b/practice-two/src/styles/bases/base.scss
@@ -5,10 +5,20 @@
 html {
   font-family: Integral CF, Satoshi;
   margin: 0 auto;
+  font-size: 20px;
+}
+
+@function toRem($pxValue) {
+  @return math.div($pxValue, 16) * 0.8rem;
 }
 
 @media (min-width: 1440px) {
   html {
     max-width: 1440px;
+    font-size: 32px;
+  }
+
+  @function toRem($pxValue) {
+    @return math.div($pxValue, 32) * 1rem;
   }
 }
