--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -1,5 +1,5 @@
 @function toRem($pxValue) {
-  @return math.div($pxValue, 16) * 1rem;
+  @return math.div($pxValue, 16) * 0.8rem;
 }
 
 .banner {
@@ -13,7 +13,7 @@
 
   &__content {
     max-width: toRem(315);
-    font-size: 0.7em;
+    font-size: 0.7rem;
     padding: toRem(20) 0;
     color: $primary-color;
   }
@@ -24,18 +24,18 @@
     max-width: toRem(278);
     padding: toRem(20) 0;
     justify-content: space-between;
-    margin: 0 ToRem(40);
+    margin: 0 toRem(40);
   }
 
   &__info-num {
-    font-size: 1.2em;
+    font-size: 1.2rem;
     font-weight: 700;
     padding: toRem(6) 0;
   }
 
   &__info-desc {
     display: block;
-    font-size: 0.5em;
+    font-size: 0.6rem;
     color: $primary-color;
     font-weight: 400;
   }
@@ -46,7 +46,7 @@
 
   &--special {
     border-left: 1px solid $line-color;
-    padding-left: toRem(20);
+    padding-left: toRem(27.5);
   }
 
   &__img {
@@ -60,10 +60,13 @@
 }
 
 @media (min-width: 1440px) {
+  @function toRem($pxValue) {
+    @return math.div($pxValue, 32) * 1rem;
+  }
+
   .banner {
     background-image: url('../assets/images/banners/rectangle.png');
     background-repeat: no-repeat;
-
     &__desc {
       padding: toRem(103) 0;
     }
@@ -74,7 +77,7 @@
     }
 
     &__content {
-      font-size: 0.5em;
+      font-size: 0.5rem;
       padding: toRem(32) 0;
       max-width: toRem(545);
       color: $primary-color;
@@ -90,12 +93,12 @@
     }
 
     &__info-num {
-      font-size: 1.25em;
+      font-size: 1.25rem;
       font-weight: 700;
     }
 
     &__info-desc {
-      font-size: 0.4em;
+      font-size: 0.4rem;
     }
 
     &__img {
