--- a/practice-two/src/styles/modules/title.scss
+++ b/practice-two/src/styles/modules/title.scss
@@ -4,23 +4,23 @@
 }
 
 .title-primary {
-  font-size: 1.6em;
+  font-size: 1.6rem;
   padding-top: toRem(10);
 }
 
 .title-secondary {
-  font-size: 1.8em;
+  font-size: 1.8rem;
   font-weight: 700;
   max-width: toRem(315);
 }
 
 @media (min-width: 1440px) {
   .title-primary {
-    font-size: 1.5em;
+    font-size: 1.5rem;
   }
 
   .title-secondary {
-    font-size: 2em;
+    font-size: 2rem;
     max-width: toRem(577);
   }
 }
