fix comments for product

--- a/practice-two/src/styles/index.scss
+++ b/practice-two/src/styles/index.scss
@@ -1,5 +1,5 @@
 // all style
-
+@import 'modules/unit.scss';
 @import 'bases/index.scss';
 @import 'layouts/index.scss';
 @import 'modules/index.scss';
