--- a/practice-two/src/styles/layouts/product.scss
+++ b/practice-two/src/styles/layouts/product.scss
@@ -2,6 +2,7 @@
   margin: toRem(40) auto 0;
   text-align: center;
   font-family: Satoshi;
+  padding-bottom: 15px;
 
   &__item {
     margin-top: toRem(32);
